; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3drm/extr_d3drm.c_d3drm_create_mesh_object.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3drm/extr_d3drm.c_d3drm_create_mesh_object.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.d3drm_mesh = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**, i32*)* @d3drm_create_mesh_object to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @d3drm_create_mesh_object(i8** %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.d3drm_mesh*, align 8
  %7 = alloca i32, align 4
  store i8** %0, i8*** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = call i32 @d3drm_mesh_create(%struct.d3drm_mesh** %6, i32* %8)
  store i32 %9, i32* %7, align 4
  %10 = call i64 @FAILED(i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %2
  %13 = load i32, i32* %7, align 4
  store i32 %13, i32* %3, align 4
  br label %20

14:                                               ; preds = %2
  %15 = load %struct.d3drm_mesh*, %struct.d3drm_mesh** %6, align 8
  %16 = getelementptr inbounds %struct.d3drm_mesh, %struct.d3drm_mesh* %15, i32 0, i32 0
  %17 = bitcast i32* %16 to i8*
  %18 = load i8**, i8*** %4, align 8
  store i8* %17, i8** %18, align 8
  %19 = load i32, i32* %7, align 4
  store i32 %19, i32* %3, align 4
  br label %20

20:                                               ; preds = %14, %12
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i64 @FAILED(i32) #1

declare dso_local i32 @d3drm_mesh_create(%struct.d3drm_mesh**, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
